2022-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Add an explicative message
	for union alternative constraint exceptions.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/union-constraint-1.pk: New test.
	* testsuite/poke.pkl/union-constraint-2.pk: Likewise.
	* testsuite/poke.pkl/union-constraint-3.pk: Likewise.
	* testsuite/poke.pkl/union-constraint-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-04-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (Pk_With_Ios_Fn): New type.
	(Pk_Temp_Ios_Generator): Likewise.
	(with_temp_ios): New function.
	(with_cur_ios): Likewise.
	* testsuite/poke.std/std-test.pk: Tests for with_temp_ios and
	with_cur_ios.
	* doc/poke.texi (with_temp_ios): New section.
	(with_cur_ios): Likewise.

2022-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/openpgp.pk (PGP_Packet): Remove pretty-printer.  Use an
	internal UID type and use #<uid:...> marks in its pretty-printer.

2022-04-11  Jose E. Marchesi  <jemarch@gnu.org>



2022-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/openpgp.pk (PGP_Packet): Add constraint to check that
	the payload size matches with the declared length in the header.

2022-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Exceptions): Remove mention to E_map_bounds.
	(Array Constructors): Update.
	(Array maps bounded by number of elements): Likewise.
	(Array maps bounded by size): Likewise.

2022-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/diff.pk: Correct handling of boundaries constraint
	error.

2022-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_constructor): Add explicative message
	to E_constraint raised from unsatisfied array boundaries.
	(array_mapper): Likewise.

2022-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_mapper): Raise PVM_E_CONSTRAINT
	instead of PVM_E_MAP_BOUNDS in case of array bound failure.
	(array_constructor): Likewise.